--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,8 +9,7 @@ services:
       - ./.env
 
   web:
-    build:
-      context: ../api_yamdb
+    image: alvaresyp/yamdb_final
     restart: always
     volumes:
       - static_value:/app/static/
