--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -42,8 +42,10 @@ jobs:
         - name: Push to Docker Hub
           uses: docker/build-push-action@v2
           with:
+            context: ./api_yamdb
+            file: ./api_yamdb/Dockerfile
             push: true
-            tags: alvaresyp/yamdb_final
+            tags: alvaresyp/final_16
 
   deploy:
     runs-on: ubuntu-latest
